# openapi/index.yaml
@@ -56,6 +56,30 @@ components:
         business_name:
           type: string
           description: registered business name
+    YoutubeReferenceCreateRequestBody:
+      type: "object"
+      properties:
+        sfa_license_no:
+          type: "string"
+        video_id:
+          type: "string"
+        timestamp:
+          type: "string"
+    YoutubeReference:
+      type: "object"
+      properties:
+        id:
+          type: "integer"
+          format: "int32"
+        video_id:
+          type: "string"
+        sfa_license_no:
+          type: "string"
+        timestamp:
+          type: "string"
+        creator:
+          type: "string"
+
 paths:
   /auth/register:
     post:
@@ -120,3 +144,39 @@ paths:
                       $ref: '#/components/schemas/FoodEstablishmentRequest'
                   message:
                     type: string
+  /reference/youtube/:
+    post:
+      summary: "POST reference/youtube/"
+      operationId: "create"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/YoutubeReferenceCreateRequestBody"
+        required: true
+      responses:
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/YoutubeReference"
+  /reference/youtube/all:
+    get:
+      summary: "GET reference/youtube/all"
+      operationId: "getAll"
+      responses:
+        "200":
+          description: "OK"
+          content:
+            'application/json':
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/YoutubeReference"
+                  message:
+                    type: string
+
